--- a/portfolio.html
+++ b/portfolio.html
@@ -70,8 +70,10 @@
                     <li class="project-cards-item">
                         <a class="project-cards-link link" href="">
                             <div class="project-cards-thumb">
-                                <img class="project-cards-img" src="./images/banking_app.jpg"
-                                    alt="Banking App Interface Concept" width="360" height="300">
+                                <img class="project-cards-img"
+                                    srcset="./images/banking_app.jpg 1x, ./images/banking_app@2x.jpg 2x"
+                                    src="./images/banking_app@2x.jpg" alt="Banking App Interface Concept" width="360"
+                                    height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
