--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         </svg>
       </button>
       <ul class="mobile-menu-refs list">
-        <li class="mobile-menu-refs-item">
+        <li class="mobile-menu-refs-item studio">
           <a href="./index.html" class="mobile-menu-refs-link link">Studio</a>
         </li>
         <li class="mobile-menu-refs-item">
